fun-ui => voice-ui

--- a/lib/modal/modal.scss
+++ b/lib/modal/modal.scss
@@ -1,6 +1,6 @@
 @import "../helper/mainTheme";
 
-.fun-ui-modal {
+.voice-ui-modal {
     position: fixed;
     background: #fff;
     width: 520px;
