--- a/lib/layout/layout.scss
+++ b/lib/layout/layout.scss
@@ -1,15 +1,15 @@
 .voice-ui-layout{
-    border: 1px solid red;
+    // border: 1px solid red;
     display: flex;
     flex-direction: column;
     &-content{
         flex-grow: 1;
-        border: 1px solid green;
+        // border: 1px solid green;
     }
     & &{
         flex-grow: 1;
         flex-direction: row;
-        border: 1px solid blue;
+        // border: 1px solid blue;
     }
     &-hasAside {
         flex-direction: row;
