--- a/example.scss
+++ b/example.scss
@@ -32,7 +32,8 @@ a {
 }
 
 pre {
-    font-family: "Fira Code Medium", Consolas, monospace;
+    // font-family: "Fira Code Medium", Consolas, monospace;
+    font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, "\5FAE\8F6F\96C5\9ED1", Arial, sans-serif;
 }
 
 $padding: 16px;
