--- a/lib/icon/icon.scss
+++ b/lib/icon/icon.scss
@@ -1,6 +1,8 @@
-.voice-ui-icon{
-    width: 1.4em;
-    height: 1.4em;
+.voice-ui-icon {
+    width: 35px;
+    height: 35px;
+    // width: 1.4em;
+    // height: 1.4em;
     display: inline-block;
     // 让svg接受外部 color颜色，否则就是自己本身颜色
     fill: currentColor;
