--- a/lib/modal/modal.scss
+++ b/lib/modal/modal.scss
@@ -67,4 +67,15 @@
         cursor: pointer;
         transition: color .3s;
     }
+
+    & .modal-innerBtn{
+        margin: 0 4px;
+        &:first-child {
+            margin-left: 0;
+        }
+    
+        &:last-child {
+            margin-right: 0;
+        }
+    }
 }
