--- a/example.scss
+++ b/example.scss
@@ -37,7 +37,9 @@ pre {
 }
 
 $padding: 16px;
-$main-color: rgb(69, 84, 145);
+// $main-color: rgb(69, 84, 145);
+// $main-color: #7cd1cd;
+$main-color: #36b8c2;
 $border-color: #eee;
 
 body {
@@ -53,6 +55,8 @@ body {
 }
 
 .site-main {
+
+    // overflow: hidden;
     .doc {
         display: flex;
         flex-wrap: nowrap;
@@ -116,8 +120,8 @@ body {
             & .doc-props-title {
                 margin: 20px 0 30px;
             }
-            
-            & .doc-props{
+
+            & .doc-props {
                 // width: 80%;
                 text-align: center;
             }
@@ -138,7 +142,7 @@ body {
 
                 tr {
                     border-bottom: 1px solid rgb(230, 230, 230);
-                    
+
                     th {
                         padding: 15px 10px;
                         background-color: rgba(250, 250, 252, 1);
@@ -163,6 +167,7 @@ body {
 
         & .doc-aside {
             width: 160px;
+
 
             div {
                 margin-bottom: 10px;
@@ -227,6 +232,7 @@ body {
                 display: block;
                 padding: 8px $padding;
                 padding-left: 50px;
+                font-size: 14px;
 
                 &:hover {
                     color: white;
@@ -234,11 +240,11 @@ body {
 
                 &.active {
                     color: white;
-                    background-color: $main-color;
+                    background-color: lighten($main-color, 15%);
                 }
 
                 &:hover {
-                    background-color: $main-color;
+                    background-color: lighten($main-color, 15%);
                 }
             }
         }
