--- a/lib/button/button.scss
+++ b/lib/button/button.scss
@@ -1,4 +1,4 @@
-@import '../../example.scss';
+@import '../../index.scss';
 // $main-color: #13c2c2;
 $ligten-color: #36cfc9;
 $higten-color: #08979c;
