--- a/index.scss
+++ b/index.scss
@@ -208,6 +208,8 @@ body {
 
 
 .site-header {
+    display: flex;
+    justify-content: space-between;
     height: 64px;
     background-color: #fff;
     color: #fff;
@@ -221,6 +223,26 @@ body {
     align-items: center;
     box-shadow: 0 2px 8px #f0f1f2;
     padding: 0 32px;
+
+    .site-header-left {
+        color: rgb(51, 48, 48);
+        // color: black;
+        line-height: 1px;
+        margin-right: 80px;
+        width: 100px;
+        display: inline-flex;
+    }
+
+    .site-header-left-icon {
+        margin-right: 15px;
+    }
+
+    .site-header-left-text {
+        vertical-align: bottom;
+        line-height: 30px;
+        font-size: 16px;
+        margin-right: 25px;
+    }
 
     .logo {
 
